--- a/PaginaHTML/Pagina-Desarrollo/index.html
+++ b/PaginaHTML/Pagina-Desarrollo/index.html
@@ -12,16 +12,16 @@
         <style>
             /* Fondo agradable visualmente */
             body {
-                background-image: url('/img/fondo.avif'); 
+                background-image: url('./img/fondo.avif'); /* Cambia 'ruta_de_tu_imagen.jpg' por la ruta de tu imagen de fondo */
                 background-size: cover;
                 background-repeat: no-repeat;
                 background-attachment: fixed;
-                background-color: #f0f0f0; 
+                background-color: #f0f0f0; /* Color de fondo de respaldo si la imagen no se carga */
             }
             
             .container {
                 text-align: center;
-                background-color: rgba(255, 255, 255, 0.9); 
+                background-color: rgba(255, 255, 255, 0.9); /* Fondo del contenido con un color de fondo blanco translúcido */
                 padding: 20px;
                 border-radius: 10px;
             }
@@ -56,7 +56,7 @@
             .subscription-form {
                 text-align: center;
                 padding: 20px;
-                background-color: rgba(255, 255, 255, 0.9); 
+                background-color: rgba(255, 255, 255, 0.9); /* Fondo del formulario con un color de fondo blanco translúcido */
                 border-radius: 10px;
             }
     
