--- a/PaginaHTML/Pagina-Desarrollo/index.html
+++ b/PaginaHTML/Pagina-Desarrollo/index.html
@@ -10,18 +10,17 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
         <title>Jugadores de Fútbol</title>
         <style>
-            /* Fondo agradable visualmente */
             body {
-                background-image: url('./img/fondo.avif'); /* Cambia 'ruta_de_tu_imagen.jpg' por la ruta de tu imagen de fondo */
+                background-image: url('./img/fondo.avif'); 
                 background-size: cover;
                 background-repeat: no-repeat;
                 background-attachment: fixed;
-                background-color: #f0f0f0; /* Color de fondo de respaldo si la imagen no se carga */
+                background-color: #f0f0f0; 
             }
             
             .container {
                 text-align: center;
-                background-color: rgba(255, 255, 255, 0.9); /* Fondo del contenido con un color de fondo blanco translúcido */
+                background-color: rgba(255, 255, 255, 0.9); 
                 padding: 20px;
                 border-radius: 10px;
             }
@@ -56,7 +55,7 @@
             .subscription-form {
                 text-align: center;
                 padding: 20px;
-                background-color: rgba(255, 255, 255, 0.9); /* Fondo del formulario con un color de fondo blanco translúcido */
+                background-color: rgba(255, 255, 255, 0.9); 
                 border-radius: 10px;
             }
     
