--- a/PaginaHTML/Pagina-Desarrollo/index.html
+++ b/PaginaHTML/Pagina-Desarrollo/index.html
@@ -141,6 +141,7 @@
                 </div>
             </div>
         </div>
+        <!-- Después del formulario de suscripción, agregaremos una sección de información -->
         <div class="row justify-content-center text-center">
             <div class="column">
                 <h2>Suscríbete para saber más sobre fútbol</h2>
@@ -155,7 +156,13 @@
                 </div>
             </div>
         </div>
-        
+
+        <div class="container" style="margin-top: 20px; margin-bottom: 20px;">
+            <h2>Información Adicional</h2>
+            <p>Aquí encontrarás información interesante sobre el mundo del fútbol, incluyendo datos históricos, estadísticas de jugadores y mucho más.</p>
+            <p>Para conocer las últimas noticias y eventos deportivos, te invitamos a visitar el sitio oficial de la FIFA <a href="https://www.fifa.com/fifaplus/es/" target="_blank">FIFA.com</a>.</p>
+        </div>
+
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
