--- a/PaginaHTML/Pagina-Desarrollo/index.html
+++ b/PaginaHTML/Pagina-Desarrollo/index.html
@@ -160,7 +160,7 @@
         <div class="container" style="margin-top: 20px; margin-bottom: 20px;">
             <h2>Información Adicional</h2>
             <p>Aquí encontrarás información interesante sobre el mundo del fútbol, incluyendo datos históricos, estadísticas de jugadores y mucho más.</p>
-            <p>Para conocer las últimas noticias y eventos deportivos, te invitamos a visitar el sitio oficial de la FIFA <a href="https://www.fifa.com/fifaplus/es/" target="_blank">FIFA.com</a>.</p>
+            <p>Para conocer las últimas noticias y eventos deportivos, te invitamos a visitar el sitio oficial de la <a href="https://www.fifa.com/fifaplus/es/" target="_blank">FIFA</a>.</p>
         </div>
 
     </div>
